--- a/www/reports/.htaccess
+++ b/www/reports/.htaccess
@@ -18,3 +18,5 @@ RewriteRule ^project(.*)$ project.php
 RewriteRule ^stock-receipts(.*)$ stock-receipts.php
 RewriteRule ^direct-material-issuances(.*)$ direct-material-issuances.php
 RewriteRule ^indirect-material-issuances(.*)$ indirect-material-issuances.php
+RewriteRule ^print-stock-receipts(.*)$ print-stock-receipts.php
+RewriteRule ^check-funding(.*)$ check-funding.php
