--- a/www/reports/.htaccess
+++ b/www/reports/.htaccess
@@ -20,3 +20,4 @@ RewriteRule ^direct-material-issuances(.*)$ direct-material-issuances.php
 RewriteRule ^indirect-material-issuances(.*)$ indirect-material-issuances.php
 RewriteRule ^print-stock-receipts(.*)$ print-stock-receipts.php
 RewriteRule ^check-funding(.*)$ check-funding.php
+RewriteRule ^check-print(.*)$ check-print.php
