--- a/www/reports/.htaccess
+++ b/www/reports/.htaccess
@@ -24,3 +24,5 @@ RewriteRule ^print-stock-receipts(\/.*)$ print-stock-receipts.php
 RewriteRule ^check-funding(\.*)$ check-funding.php
 RewriteRule ^check-print(\/.*)$ check-print.php
 RewriteRule ^accounts-payable-print(\/.*)*$ accounts-payable-print.php
+RewriteRule ^print-direct-issuance(\/.*)*$ print-direct-issuance.php
+RewriteRule ^print-indirect-issuance(\/.*)*$ print-indirect-issuance.php
